=====================
What's new in richard
=====================

.. contents::
   :local:


Version 0.2: In development
===========================

**Features:**

* New API v2! Built on django-rest-framework, it should be simpler,
  easier, and less buggy. See documentation for API details.


**Backwards-incompatible changes:**

* Ditched API v1. It used tastypie and I jettisoned that.

* To use API v2, you'll need to create new API tokens in the admin in
  the Token section.

* Switched from Jinja2 templates to Django templates. If you had your
  own theme, you'll have to redo it with Django templates.


**Other changes:**

* Moved a bunch of files from ``richard/`` to the new base app in
  ``richard/base/``. This cleans up the richard project directory a
  bit.

* Updated to django-haystack 2.0.

* Cleaned up the search page a bit. Added a category facet.

* Cleaned up video listing pages.

* Category pages now show draft videos if you're an admin.

* Updated to Django 1.6.

* Updated requirements.


Version 0.1: May 18th, 2013
===========================

**Features:**

* categories, speakers, videos
* lots of metadata
* RSS feeds for videos, categories, site news
* site news
* basic search
* admin section
* JSON API for querying the data and adding data


**Backwards-incompatible changes:**

* None since this is the initial release.


**Other changes:**

* Everything since this is the intitial release.


**Thank you!:**

Thank you to all the following folks who contributed code or reported bugs
or otherwise helped with this release!

* Adam Zapletal
* Alejandro Gómez
* Andrew Szeto
* Carl Karsten
* Chris Lawlor
* David Winterbottom
* Eduard-Cristian Stefan
* Eka Putra
* Fernando Gutierrez
* Frank Ploss
* Gledi Caushaj
* lukegotszling
* Miki Tebeka
* Nathan Villaescusa
* Nes.quik
* Pavel Savchenko
* Reiner Gerecke
* Ricky Rosario
* Riley Labrecque
* Roy Hyunjin Han
* Senthil Kumaran
* Sheila Miguez
* Spencer Herzberg
* Will Kahn-Greene